# analysis-service/src/test/resources/swagger/swagger.yaml
@@ -10,22 +10,22 @@ info:
     url: https://github.com/Paulo-Possatto/Chromamon/blob/main/LICENSE
   version: 1.0.0
 servers:
-  - url: http://localhost:8080
-    description: Local environment for testing
+- url: http://localhost:8080
+  description: Local environment for testing
 tags:
-  - name: Get Analysis
-    description: All resources related to retrieve analysis data from the database
-  - name: Post Analysis
-    description: All resources related to save analysis data into the database
-  - name: Put Analysis
-    description: All resources related to modify analysis data saved into the database
-  - name: Delete Analysis
-    description: All resources related to erase analysis data into the database
+- name: Get Analysis
+  description: All resources related to retrieve analysis data from the database
+- name: Post Analysis
+  description: All resources related to save analysis data into the database
+- name: Put Analysis
+  description: All resources related to modify analysis data saved into the database
+- name: Delete Analysis
+  description: All resources related to erase analysis data into the database
 paths:
   /keepalive:
     get:
       tags:
-        - keep-alive-resource
+      - keep-alive-controller
       operationId: keepAlive
       responses:
         "200":
@@ -37,7 +37,7 @@ paths:
   /api/analyses:
     get:
       tags:
-        - Get Analysis
+      - Get Analysis
       summary: Get a list of all analyses
       description: |
         Returns a list of all the analyses stored in the database.
@@ -50,35 +50,35 @@ paths:
         - **LAB_ANALYST**
       operationId: getAnalyses
       parameters:
-        - name: page
-          in: query
-          description: The page number
-          schema:
-            type: integer
-            default: 0
-        - name: size
-          in: query
-          description: Number of items per page
-          schema:
-            type: integer
-            default: 20
-        - name: sort
-          in: query
-          description: Sorting criteria
-          schema:
-            type: string
-        - name: X-API-Version
-          in: header
-          description: The version of the analyses API
-          required: true
-          schema:
-            type: string
-        - name: X-Chroma-Token
-          in: header
-          description: The JWT token used to access this resource
-          required: true
-          schema:
-            type: string
+      - name: page
+        in: query
+        description: The page number
+        schema:
+          type: integer
+          default: 0
+      - name: size
+        in: query
+        description: Number of items per page
+        schema:
+          type: integer
+          default: 20
+      - name: sort
+        in: query
+        description: Sorting criteria
+        schema:
+          type: string
+      - name: X-API-Version
+        in: header
+        description: The version of the analyses API
+        required: true
+        schema:
+          type: string
+      - name: X-Chroma-Token
+        in: header
+        description: The JWT token used to access this resource
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: "Give a page of analyses, the amount can be modified in the\
@@ -92,72 +92,96 @@ paths:
                   description: The response object that lists all the analyses
                   value:
                     analyses:
-                      - analysisId: AN_0000000001
-                        transformerSerialNumber: TRF-132kV-2023-ABC123
-                        analysisDateTime: 25-06-2025 19:17:38
-                        labAnalysisDateTime: 26-06-2025 09:15:11
-                        chromatography:
-                          hydrogen: "0.15"
-                          methane: "0.21"
-                          ethane: "0.09"
-                          acetylene: "0.11"
-                          carbonMonoxide: "4.45"
-                          carbonDioxide: "995.41"
-                          createdDateTime: 18-07-2025 19:22:48
-                        oilType: Mineral Oil
-                        observations:
-                          sampleCondition: Presence of particles
-                          gasExtractionMethod: Vacuum
-                          modelUsed: GC Agilent 7890B
-                          createdDateTime: 18-07-2025 19:22:48
-                        furfuralAnalysis: "0.50"
-                        oilHumidity: "15.00"
-                        createdDateTime: 18-07-2025 19:22:48
-                        updatedDateTime: 18-07-2025 19:22:48
-                      - analysisId: AN_0000000002
-                        transformerSerialNumber: TRF-220kV-2023-XYZ789
-                        analysisDateTime: 26-06-2025 08:45:22
-                        labAnalysisDateTime: 27-06-2025 10:30:05
-                        chromatography:
-                          hydrogen: "0.22"
-                          methane: "0.35"
-                          ethane: "0.12"
-                          acetylene: "0.08"
-                          carbonMonoxide: "3.75"
-                          carbonDioxide: "1020.10"
-                          createdDateTime: 18-07-2025 19:22:48
-                        oilType: Synthetic Ester
-                        observations:
-                          sampleCondition: Clear with slight discoloration
-                          gasExtractionMethod: Headspace
-                          modelUsed: GC Shimadzu 2030
-                          createdDateTime: 18-07-2025 19:22:48
-                        furfuralAnalysis: "0.30"
-                        oilHumidity: "12.30"
-                        createdDateTime: 18-07-2025 19:22:48
-                        updatedDateTime: 18-07-2025 19:22:48
-                      - analysisId: AN_0000000003
-                        transformerSerialNumber: TRF-66kV-2024-DEF456
-                        analysisDateTime: 27-06-2025 14:30:10
-                        labAnalysisDateTime: 28-06-2025 08:45:33
-                        chromatography:
-                          hydrogen: "0.18"
-                          methane: "0.28"
-                          ethane: "0.11"
-                          acetylene: "0.15"
-                          carbonMonoxide: "5.20"
-                          carbonDioxide: "980.75"
-                          createdDateTime: 18-07-2025 19:22:48
-                        oilType: Silicone Oil
-                        observations:
-                          sampleCondition: Normal appearance
-                          gasExtractionMethod: Stripping
-                          modelUsed: GC PerkinElmer Clarus 680
-                          createdDateTime: 18-07-2025 19:22:48
-                        furfuralAnalysis: "0.70"
-                        oilHumidity: "18.72"
-                        createdDateTime: 18-07-2025 19:22:48
-                        updatedDateTime: 18-07-2025 19:22:48
+                    - identifier: AN_3102554574
+                      transformerSerialNumber: TRF-132kV-2023-ABC123
+                      analysisDateTime: 25-06-2025 15:19:38
+                      labAnalysisDateTime: 26-06-2025 07:15:11
+                      chromatography:
+                        hydrogen: "0,15"
+                        methane: "0,21"
+                        ethane: "0,09"
+                        acetylene: "0,11"
+                        carbonMonoxide: "4,45"
+                        carbonDioxide: "915,41"
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      oilType: Mineral Oil
+                      observation:
+                        sampleCondition: Presence of particles
+                        gasExtractionMethod: Direct
+                        modelUsed: GC Agilent 7890B
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      furfuralAnalysis: "0,50"
+                      oilHumidity: "15,00"
+                      createdDateTime: 26-07-2025 18:35:06
+                      lastUpdateDateTime: 26-07-2025 18:35:06
+                      userCreated: AA00AA
+                      userLastUpdated: AA00AA
+                    - identifier: AN_5069214547
+                      transformerSerialNumber: TRF-220kV-2023-XYZ789
+                      analysisDateTime: 26-06-2025 06:45:22
+                      labAnalysisDateTime: 27-06-2025 08:30:05
+                      chromatography:
+                        hydrogen: "0,22"
+                        methane: "0,35"
+                        ethane: "0,12"
+                        acetylene: "0,08"
+                        carbonMonoxide: "3,75"
+                        carbonDioxide: "1.020,10"
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      oilType: Vegetal Oil
+                      observation:
+                        sampleCondition: Clear with slight discoloration
+                        gasExtractionMethod: Manual Pump
+                        modelUsed: GC Shimadzu 2030
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      furfuralAnalysis: "0,30"
+                      oilHumidity: "12,30"
+                      createdDateTime: 26-07-2025 18:35:06
+                      lastUpdateDateTime: 26-07-2025 18:35:06
+                      userCreated: AA00AA
+                      userLastUpdated: AA00AA
+                    - identifier: AN_8369902135
+                      transformerSerialNumber: TRF-66kV-2024-DEF456
+                      analysisDateTime: 27-06-2025 12:30:10
+                      labAnalysisDateTime: 28-06-2025 06:45:33
+                      chromatography:
+                        hydrogen: "0,18"
+                        methane: "0,28"
+                        ethane: "0,11"
+                        acetylene: "0,15"
+                        carbonMonoxide: "5,20"
+                        carbonDioxide: "980,75"
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      oilType: Silicon Oil
+                      observation:
+                        sampleCondition: Normal appearance
+                        gasExtractionMethod: Electric Pump
+                        modelUsed: GC PerkinElmer Clarus 680
+                        createdDateTime: 26-07-2025 18:35:06
+                        lastUpdateDateTime: 26-07-2025 18:35:06
+                        userCreated: AA00AA
+                        userLastUpdated: AA00AA
+                      furfuralAnalysis: "0,70"
+                      oilHumidity: "18,72"
+                      createdDateTime: 26-07-2025 18:35:06
+                      lastUpdateDateTime: 26-07-2025 18:35:06
+                      userCreated: AA00AA
+                      userLastUpdated: AA00AA
                     currentPage: 0
                     totalItems: 3
                     totalPages: 1
@@ -202,6 +226,14 @@ paths:
                     details: "'X-API-Version' must begin with 'V', followed by the\
                       \ version number"
                     timestamp: 22-07-2025 10:23:30
+                Invalid sort param:
+                  description: The property used to sort does not exist in the entity
+                    object
+                  value:
+                    statusCode: 400
+                    message: Bad Request
+                    details: No property 'abc' found for type 'AnalysisEntity'
+                    timestamp: 26-07-2025 20:56:52
         "401":
           description: The Header param 'X-Chroma-Token' is not being validated correctly
           content:
@@ -314,23 +346,22 @@ components:
     Analysis-Response:
       type: object
       properties:
-        analysisId:
+        identifier:
           type: string
-          description: The analysis identification generated in the database
-          example: AN_0000000001
+          description: "The identifier of the analysis, starting with 'AN_' followed\
+            \ by 10 numbers"
+          example: AN_5168350147
         transformerSerialNumber:
           type: string
           description: The serial number of the transformer that was analysed
           example: TRF-132kV-2023-ABC123
         analysisDateTime:
           type: string
-          description: "The date and time in which the transformer was analysed, following\
-            \ the dd-MM-yyyy HH:mm:ss format"
-          example: 25-06-2025 19:17:38
+          description: The date and time the analysis was carried out
+          example: 25-06-2025 17:19:38
         labAnalysisDateTime:
           type: string
-          description: "The date and time in which the sample arrived at the laboratory,\
-            \ following the dd-MM-yyyy HH:mm:ss format"
+          description: The time the analysis was started in the laboratory
           example: 26-06-2025 09:15:11
         chromatography:
           $ref: "#/components/schemas/Chromatography-Response"
@@ -338,25 +369,35 @@ components:
           type: string
           description: The type of isolating oil used in the transformer
           example: Mineral Oil
-        observations:
+        observation:
           $ref: "#/components/schemas/Observation-Response"
         furfuralAnalysis:
           type: string
-          description: The value (in ppm or mg/kg) of the degradation of the isolating
-            paper inside the transformer
-          example: "0.5"
+          description: The value that determines the condition of the isolating paper
+            (value in mg/L)
+          example: "0.15"
         oilHumidity:
           type: string
-          description: The percentage of humidity inside the isolating oil
-          example: "15"
+          description: The percentage of humidity detected in the isolating oil
+          example: "15.0"
         createdDateTime:
           type: string
-          description: The date-time in which the data was stored in the database
-          example: 22-07-2025 15:50:20
-        updatedDateTime:
+          description: The date-time when the data was inserted in the database
+          example: 22-07-2025 15:43:25
+        lastUpdateDateTime:
           type: string
-          description: The date-time in which the data was updated
-          example: 22-07-2025 16:15:21
+          description: The date-time when the data was last updated in the database
+          example: 22-07-2025 15:43:25
+        userCreated:
+          type: string
+          description: "The subject that created the data, took from the from the\
+            \ JWT token"
+          example: AA00AA
+        userLastUpdated:
+          type: string
+          description: "The subject that last updated the data, took from the from\
+            \ the JWT token"
+          example: AA00AA
       description: The object that contains the information about a single analysis
     Chromatography-Response:
       type: object
@@ -389,6 +430,20 @@ components:
           type: string
           description: The date-time when the data was inserted in the database
           example: 22-07-2025 15:43:25
+        lastUpdateDateTime:
+          type: string
+          description: The date-time when the data was last updated in the database
+          example: 22-07-2025 15:43:25
+        userCreated:
+          type: string
+          description: "The subject that created the data, took from the from the\
+            \ JWT token"
+          example: AA00AA
+        userLastUpdated:
+          type: string
+          description: "The subject that last updated the data, took from the from\
+            \ the JWT token"
+          example: AA00AA
       description: The object that contains the chromatographic information
     Observation-Response:
       type: object
@@ -409,6 +464,20 @@ components:
           type: string
           description: The date-time when the data was inserted in the database
           example: 22-07-2025 15:43:25
+        lastUpdateDateTime:
+          type: string
+          description: The date-time when the data was last updated in the database
+          example: 22-07-2025 15:43:25
+        userCreated:
+          type: string
+          description: "The subject that created the data, took from the from the\
+            \ JWT token"
+          example: AA00AA
+        userLastUpdated:
+          type: string
+          description: "The subject that last updated the data, took from the from\
+            \ the JWT token"
+          example: AA00AA
       description: The object that contains information about the observations while
         analysing
     Error-Response:
